Closed Bug 1182933 Opened 10 years ago Closed 10 years ago

New MediaResource::SilentReadAt not always restoring state properly

Categories

(Core :: Audio/Video, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla42
Tracking Status
firefox41 --- fixed
firefox42 --- fixed

People

(Reporter: jya, Assigned: jya)

References

Details

Attachments

(1 file)

Bug 1175768 implemented the method MediaResource::SilentReadAt ; however under some circumstances the stream position isn't always restored to what it was. Additionally, the MediaByteBuffer returned always has a length of 0.
Ensure SilentReadAt seek back to original position even in case of error. Properly set the MediaByteBuffer length.
Assignee: nobody → jyavenard
Comment on attachment 8632601 [details] [diff] [review] Implement MediaReadAt. Carrying r+ from bug 1148102.
Attachment #8632601 - Flags: review+
Taking the patch from bug 1148102 as this needs to be uplifted.
Blocks: 1148102
Comment on attachment 8632601 [details] [diff] [review] Implement MediaReadAt. Approval Request Comment [Feature/regressing bug #]: 1175768 [User impact if declined]: Assertion under special circumstances. [Describe test coverage new/current, TreeHerder]: Been using this patch locally for over 2 weeks. [Risks and why]: Low, only fixing incorrect behaviour [String/UUID change made/needed]: None
Attachment #8632601 - Flags: approval-mozilla-aurora?
Status: NEW → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla42
Comment on attachment 8632601 [details] [diff] [review] Implement MediaReadAt. Based on dev's verification and the fact that the patch has been in nightly for a few days, let's uplift to Aurora.
Attachment #8632601 - Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: