Bug 1182933 - Implement MediaReadAt. r=bholley, a=ritu

Ensure SilentReadAt seek back to original position even in case of error.
Properly set the MediaByteBuffer length.